--- a/ISO9660.md
+++ b/ISO9660.md
@@ -28,3 +28,6 @@ INTERFACES DE PROGRAMAS PARA ISO 9660
 El sistema puede leer archivos en medios ISO 9660 utilizando la interfaz de programas de aplicación (API) del sistema de archivos jerárquico (HFS) o la interfaz de programas de aplicación (API) del sistema de archivos integrado.
 
 
+FUENTES CONSULTADAS
+https://www.ibm.com/support/knowledgecenter/es/ssw_ibm_i_72/rzam4/rzam4iso9660.htm
+https://www.iso.org/standard/17505.html
